# ebook-downloader

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  config.example.yaml  pyproject.toml  反爬优化说明.md
src/ebook_downloader/: __init__.py  __main__.py  browser.py  catalog.py  cli.py  config.py  downloader.py  models.py  proxy.py  scheduler.py  state.py  utils.py
